# compare-runners

./: README.md  pyproject.toml
src/compare_runners/: config_parser.py  jobs.py  main.py  reports.py
